--- a/style.css
+++ b/style.css
@@ -894,8 +894,13 @@ object {
 
 /****** SEPERATE LATER ******/
 
+.single-display .site-footer {
+	display: none;
+}
+
 .site-header {
 	background: #cccccc;
+	height: 90px;
 }
 
 .site-description {
@@ -913,14 +918,46 @@ object {
 	clear: none;
 }
 
+.entry-content {
+	margin-top: 0px;
+	
+}
+
+#appdiv {
+	
+}
+
+.stdControls {
+	height: 80px;
+	background: #3e3e3e;
+	color: rgba(255,255,255,0.7);
+	padding: 14px;
+}
+
+.stdControls a {
+	color: rgba(255,255,255,0.7);
+}
+
 .visuals {
-	float: left;
+	
 	width: 50%;
+	
+	position: fixed;
+	bottom: 0px;
+	left: 0px;
+	top: 90px;
+	z-index:2;
 }
 
 .contentColumn {
-	float: right;
+	
 	width: 50%;
 	padding: 30px;
 	box-sizing: border-box;
+	overflow-y: auto;
+	position: fixed;
+	bottom: 0px;
+	right: 0px;
+	top: 90px;
+	z-index:2;
 }
