--- a/style.css
+++ b/style.css
@@ -894,6 +894,27 @@ object {
 
 /****** SEPERATE LATER ******/
 
+@import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700);
+
+.cf:before,
+.cf:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.cf:after {
+    clear: both;
+}
+
+/**
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+.cf {
+    *zoom: 1;
+}
+
+
 .single-display .site-footer {
 	display: none;
 }
@@ -928,14 +949,32 @@ object {
 }
 
 .stdControls {
-	height: 80px;
+	
 	background: #3e3e3e;
 	color: rgba(255,255,255,0.7);
-	padding: 14px;
+	border-top: 1px solid rgba(255,255,255,0.1);
 }
 
 .stdControls a {
+	font-family: "Raleway";
 	color: rgba(255,255,255,0.7);
+	display: inline-block;
+	float: left;
+	padding: 14px;
+	border-right: 1px solid rgba(255,255,255,0.1);
+	text-decoration: none;
+	line-height: 1em;
+	margin-left: 0px;
+	margin-right: 0px;
+	font-size: 14px;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	font-weight: 300;
+}
+
+.stdControls a:hover {
+	background: rgba(255,255,255,0.2);
+	border-right: 1px solid rgba(255,255,255,0);
 }
 
 .visuals {
@@ -952,7 +991,7 @@ object {
 .contentColumn {
 	
 	width: 50%;
-	padding: 30px;
+	
 	box-sizing: border-box;
 	overflow-y: auto;
 	position: fixed;
@@ -960,4 +999,8 @@ object {
 	right: 0px;
 	top: 90px;
 	z-index:2;
+}
+
+.contentColumnInner {
+	padding: 30px;
 }
