--- a/style.css
+++ b/style.css
@@ -896,6 +896,10 @@ object {
 
 @import url(http://fonts.googleapis.com/css?family=Raleway:400,300,700);
 
+body {
+	font-family: "Raleway";
+}
+
 .cf:before,
 .cf:after {
     content: " "; /* 1 */
