--- a/style.css
+++ b/style.css
@@ -975,6 +975,10 @@ background-size: cover;
 	left: 50%;
 	z-index:3;
 	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%) translateZ(0) scale(1.0, 1.0);
+	
+	-webkit-backface-visibility: hidden;
+    
 	color: #fff;
 	
 }
@@ -1026,7 +1030,11 @@ h1.site-title a svg {
 .site-header {
 	background: #444444;
 	line-height: 1em;
-	display: flex;
+	  display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+	  display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+	  display: -ms-flexbox;      /* TWEENER - IE 10 */
+	  display: -webkit-flex;     /* NEW - Chrome */
+	  display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
 	width: 100%;
 	position: relative;
 	z-index:2;
@@ -1040,6 +1048,7 @@ h1.site-title a svg {
 	/*width: 50%;
 	float: left;*/
 	flex: 0 auto;
+	-webkit-flex: 0 auto;
 	width: 300px;
 	
 }
@@ -1050,6 +1059,7 @@ h1.site-title a svg {
 	width: auto;
 	clear: none;
 	flex: 0 auto;
+	-webkit-flex: 0 auto;
 	padding-left: 20px;
 	padding-right: 20px;
 	
@@ -1075,6 +1085,7 @@ h1.site-title a svg {
 
 .searchContainer {
 	flex: 3 0px;
+	-webkit-flex: 3 0px;
 }
 
 .searchContainer .search-submit {
